# knative-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
knative/: Cargo.toml  README.md
knative-conditions/: Cargo.toml
knative-conditions/src/: lib.rs
knative-derive/: Cargo.toml
knative-derive/src/: error.rs  inner.rs  lib.rs
knative-derive/tests/: test.rs
knative-eventing/: Cargo.toml
knative-eventing/src/apis/sources/v1/: mod.rs  sinkbinding.rs
knative-serving/: Cargo.toml
knative-serving/src/: lib.rs
knative-serving/src/apis/: mod.rs
knative-serving/src/apis/serving/v1/: mod.rs  service_types.rs
knative/src/: error.rs  lib.rs
knative/src/duck/v1/: addressable_type.rs  binding_types.rs  knative_reference.rs  mod.rs  source_types.rs  status_types.rs
test/mock/: default_broker.yaml  default_service.yaml  kubeconfig.yaml
