[package]
name = "knative-conditions"
version = "0.1.0"
edition = "2021"
authors = ["Julian Aichholz <julianaichholz@gmail.com>"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
schemars = { version = "0.8.10", features = ["chrono"] }
serde = "1.0.140"

[dev-dependencies]
serde_json = "1.0.82"
