[package]
name = "knative-derive"
version = "0.1.0"
edition = "2021"
authors = ["Julian Aichholz <julianaichholz@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/rusty-jules/knative-rs"
description = "Create custom types that adhere to knative specifications."

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
quote = "1.0.20"
syn = { version = "1.0.98", features = ["extra-traits"] }
knative-conditions = { path = "../knative-conditions", version = "0.1.0" }
