[package]
name = "knative-eventing"
version = "0.1.0"
edition = "2021"
authors = ["Julian Aichholz <julianaichholz@gmail.com>"]

[dependencies]
k8s-openapi = { version = "0.14.0", features = ["v1_22", "schemars"] }
knative = { path = "../knative" }
kube = { version = "0.70.0", features = ["derive"] }
schemars = { version = "0.8.8", features = ["chrono", "url"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
